[project]
name = "lina.sh"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "Flask",
    "Werkzeug",
    "pytz",
    "Markdown",
    "PyJWT",
    "python-dateutil",
    "user-agents",
    "Pillow",
    "gevent",
    "bs4",
    "Pygments",
    "playwright",
]
